--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ html,
 body {
 margin: 100px auto 0;
 height: 100%;
-background-color: #ffdad6;
+background-color: #ffdad6; /* unified color across all devices */
 font-family: "Inter", "Segoe UI", Roboto, sans-serif;
 color: #3d3527;
 display: flex;
@@ -19,6 +19,7 @@ justify-content: flex-start;
 overflow-x: hidden;
 }
 
+/* Header section */
 header {
 display: flex;
 align-items: center;
@@ -48,6 +49,7 @@ margin: 0;
 color: #2e271a;
 }
 
+/* Card container */
 #cardContainer {
 display: flex;
 gap: 24px;
@@ -71,6 +73,7 @@ background: #c7b9a6;
 border-radius: 10px;
 }
 
+/* Card styles */
 .card {
 flex: 0 0 220px;
 height: 300px;
@@ -95,7 +98,7 @@ height: 100%;
 border-radius: 16px;
 transform-style: preserve-3d;
 transition: transform 0.8s;
-background: linear-gradient(145deg, #040300db, #0c0b09e1);
+background: linear-gradient(145deg, #d6c7b2, #b6a48c);
 box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1),
 inset 0 0 8px rgba(255, 255, 255, 0.3);
 }
@@ -136,11 +139,13 @@ transform: rotateY(180deg);
 border: 1px solid #d8ccb7;
 }
 
+/* MOBILE VIEW */
 @media (max-width: 768px) {
 html,
 body {
 height: 100vh;
 overflow-y: hidden;
+background-color: #ffdad6; /* same exact color as desktop */
 }
 
 header {
@@ -148,7 +153,7 @@ position: fixed;
 top: 0;
 left: 0;
 width: 100%;
-background: rgba(245, 240, 230, 0.95);
+background: #ffdad6; /* same tone */
 padding: 15px 0;
 margin: 0;
 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -162,6 +167,7 @@ height: 50px;
 
 h1 {
 font-size: 1.4rem;
+color: #2e271a;
 }
 
 #cardContainer {
@@ -176,7 +182,7 @@ overflow-x: auto;
 overflow-y: hidden;
 scroll-padding: 30px;
 padding: 20px 30px;
-background: linear-gradient(180deg, #f5f0e6, #ebe2d4);
+background-color: #ffdad6; /* unified tone with desktop */
 }
 
 .card {
